[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scenes/Foes/DarkEmperor/EnemyDarkEmperor.gd" type="Script" id=1]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei1.png" type="Texture" id=2]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei2.png" type="Texture" id=3]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei3.png" type="Texture" id=4]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei4.png" type="Texture" id=5]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der1.png" type="Texture" id=6]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der2.png" type="Texture" id=7]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der3.png" type="Texture" id=8]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der4.png" type="Texture" id=9]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der5.png" type="Texture" id=10]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der6.png" type="Texture" id=11]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der7.png" type="Texture" id=12]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der8.png" type="Texture" id=13]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der9.png" type="Texture" id=14]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der10.png" type="Texture" id=15]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der11.png" type="Texture" id=16]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorRun/der12.png" type="Texture" id=17]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea1.png" type="Texture" id=18]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea2.png" type="Texture" id=19]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea3.png" type="Texture" id=20]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea4.png" type="Texture" id=21]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea5.png" type="Texture" id=22]
[ext_resource path="res://Art/Foes/DarkEmperor/DearkEmperorAttack/dea6.png" type="Texture" id=23]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorDeath/ded1.png" type="Texture" id=24]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorDeath/ded2.png" type="Texture" id=25]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorDeath/ded3.png" type="Texture" id=26]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorVanish/dev1.png" type="Texture" id=27]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorVanish/dev2.png" type="Texture" id=28]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorVanish/dev3.png" type="Texture" id=29]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorVanish/dev4.png" type="Texture" id=30]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorStab/des1.png" type="Texture" id=31]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorStab/des2.png" type="Texture" id=32]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorStab/des3.png" type="Texture" id=33]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorStab/des4.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Foes/DarkEmperor/AnimatedSprite.gd" type="Script" id=35]
[ext_resource path="res://Scenes/Components/CharacterController.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scenes/Components/Life.tscn" type="PackedScene" id=37]
[ext_resource path="res://FX&Sounds/DESI2.wav" type="AudioStream" id=38]
[ext_resource path="res://FX&Sounds/DarkEmperorStab.wav" type="AudioStream" id=39]
[ext_resource path="res://FX&Sounds/DESlash.wav" type="AudioStream" id=40]
[ext_resource path="res://FX&Sounds/DarkEmperorDeath.wav" type="AudioStream" id=41]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Vanish",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Stab",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0
height = 20.0

[node name="EnemyDarkEmperor" type="KinematicBody2D"]

position = Vector2( 620, 280 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
puntaje = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 7.99998, -9.72094 )
scale = Vector2( 1.57143, 1.44186 )
frames = SubResource( 1 )
animation = "Stab"
flip_h = true
script = ExtResource( 35 )

[node name="CharacterController" parent="." index="1" instance=ExtResource( 36 )]

velocidadMovimiento = 2.0
salto = 2.0
gravedad = 2.0

[node name="Life" parent="." index="2" instance=ExtResource( 37 )]

vida = 15
powerUp = 0

[node name="AttackRight" type="RayCast2D" parent="." index="3"]

visible = false
position = Vector2( 20, -10 )
scale = Vector2( 1, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="AttackLeft" type="RayCast2D" parent="." index="4"]

visible = false
position = Vector2( 0, -10 )
scale = Vector2( 1, 10 )
enabled = true
exclude_parent = true
cast_to = Vector2( -55, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="VissionRight" type="RayCast2D" parent="." index="5"]

visible = false
position = Vector2( 10, -10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 300, 0 )
collision_mask = 1

[node name="VissionLeft" type="RayCast2D" parent="." index="6"]

visible = false
position = Vector2( 0, -10 )
enabled = true
exclude_parent = true
cast_to = Vector2( -300, 0 )
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="7"]

visible = false
position = Vector2( 10, -10 )
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="StabShout" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 38 )
volume_db = -2.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="StabHit" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 39 )
volume_db = 2.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Slash" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 40 )
volume_db = -3.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Death" type="AudioStreamPlayer2D" parent="." index="12"]

stream = ExtResource( 41 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]


